2008-03-16  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Define gmodule_def locally here instead of using an
	Autoconf variable.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

2008-02-25  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.6 ===

2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.15.5 ===

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

2008-01-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

2008-01-14  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.2 ===

008-01-07  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2007-12-22  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c (g_module_open): Don't fail to load modules
	with suffix .la.  (#480122, Andrey Tsyvarev)

2007-12-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.0 ===

2007-11-08  Matthias Clasen <mclasen@redhat.com>

	* gmodule.c: Include glibconfig.h before checking G_OS_WIN32.

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* *.c: Make header include order consistent (#71704,
	Diego Escalante Urrelo)

2007-11-07  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.14.3 ===

2007-10-16  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.2 ===

2007-09-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.1 ===

2007-08-03  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.14.0 ===

2007-07-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.7 ===

2007-07-09  Matthias Clasen  <mclasen@redhat.com>

	* gmodule.c (g_module_open): Include the module file 
	name to the error message given when module initialization 
	fails.  (#445813, Gustavo Carneiro)

Fri Jun 29 2007  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.13.6 ===

2007-06-18  Matthias Clasen  <mclasen@redhat.com>
