@@ -7,7 +7,8 @@ AM_CPPFLAGS = 				\
 	-I$(top_srcdir)/gmodule 	\
 	-DG_LOG_DOMAIN=\"GModule\" 	\
 	@GLIB_DEBUG_FLAGS@ 		\
-	-DG_DISABLE_DEPRECATED
+	-DG_DISABLE_DEPRECATED		\
+	-DG_DISABLE_SINGLE_INCLUDES
 
 EXTRA_DIST +=				\
 		makefile.msc.in 	\
